--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<body>
 			<div class = 'container'>
 				<div class='row'>
-					<p class = "intro">Super Hero Trivia!!</p>
+					<p class = "intro">Super Hero Trivia!!!</p>
 				</div>
 					<div class = 'mainArea col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
 					</div>
