--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 				<div class='row'>
 					<p class = "intro">Super Hero Trivia!!!</p>
 				</div>
-					<div class = 'mainArea col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
-					</div>
+				<div class = 'mainArea'>
+				</div>
+				<div class="questionArea">
+					
+
+				<div>
 			</div>
 		</body>
 
