Added timer and it is working. Need to add the ability to popup the loss screen once time runs out

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 				<div class = 'mainArea'>
 				</div>
 				<div class="questionArea">
-					
+					<h1>Let's See what you Got</h1>
+					<br>
+					<p>Time Left:<span id="timeLeft"></span></p>
+
 
 				<div>
 			</div>
