added the first question to the question area. hooray!

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 				<div class = 'mainArea'>
 				</div>
 				<div class="questionArea">
-					<h1>Let's See what you Got</h1>
+					<h1 class = "questionText">Lets See what you Got</h1>
 					<br>
-					<p>Time Left:<span id="timeLeft"></span></p>
+					<p class = "questionText">Time Left: <span id="timeLeft"></span></p>
+					<br>
+					<p>1. <span class = "questionList"></span></p>
+						<p> <span class = "answers"></span> </p>
 
 
 				<div>
