tried to add questions on the main div. Lines 56 through 61 aren't working correctly

--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 				</div>
 				<div class = 'mainArea'>
 				</div>
+
 				<div class="questionArea">
 					<h1 class = "questionText">Lets See what you Got</h1>
 					<br>
+
 					<p class = "questionText">Time Left: <span id="timeLeft"></span></p>
 					<br>
+
 					<p>1. <span class = "questionList"></span></p>
 						<p> <span class = "answers"></span> </p>
 
+					<p>2. <span class = "questionList"></span></p>
+						<p> <span class = "answers"></span> </p>
 
-				<div>
+				</div>
 			</div>
 		</body>
 
