--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<br>
 
 					<p>1. <span class = "questionList"></span></p>
-						<p> <span class = "answers"></span> </p>
+						<p>2. <span class = "answers"></span> </p>
 
 					<p>2. <span class = "questionList"></span></p>
 						<p> <span class = "answers"></span> </p>
